# opencode-mate

./: .gitignore  README.md  package-lock.json  package.json  pyproject.toml  skills-lock.json
.agents/skills/convert-to-markdown/: SKILL.md
.opencode/: opencode.json
