[project]
name = "research-agent"
version = "0.1.0"
description = "Research Agent"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "openpyxl>=3.1.5",
    "pandas>=3.0.2",
    "pdf2image>=1.17.0",
    "pdfplumber>=0.11.9",
    "pillow>=12.2.0",
    "pypdf>=6.10.2",
    "pytesseract>=0.3.13",
    "reportlab>=4.5.0",
    "graphifyy[mcp]>=0.7.7",
    "pymupdf4llm>=1.27.2.3",
]
